--- a/Server/package.json
+++ b/Server/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "server",
+  "name": "form-api",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "scripts": {},
   "dependencies": {
-    "axios": "^1.9.0",
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.14.0",
-    "nodemailer": "^6.10.1"
+    "mongoose": "^7.2.1",
+    "nodemailer": "^6.9.1",
+    "dotenv": "^16.3.1"
   }
 }
