--- a/Server/package.json
+++ b/Server/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "scripts": {},
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "mongoose": "^7.2.1",
     "nodemailer": "^6.9.1",
-    "dotenv": "^16.3.1"
+    "nodemon": "^3.1.10",
+    "punycode": "^2.3.1"
   }
 }
