--- a/Server/package.json
+++ b/Server/package.json
@@ -1,7 +1,9 @@
 {
   "name": "form-api",
   "version": "1.0.0",
-  "scripts": {},
+  "scripts": {
+      "start": "node index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
