--- a/Server/package.json
+++ b/Server/package.json
@@ -2,9 +2,10 @@
   "name": "form-api",
   "version": "1.0.0",
   "scripts": {
-      "start": "node index.js"
+      "start": "node Server/index.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "mongoose": "^7.2.1",
