--- a/Server/package.json
+++ b/Server/package.json
@@ -2,7 +2,7 @@
   "name": "form-api",
   "version": "1.0.0",
   "scripts": {
-      "start": "node Server/index.js"
+      "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
